tests/rosetta/out/Smalltalk/ackermann-function.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:35Z
"
| ackermann main |
ackermann := [:m :n | ((m = 0)) ifTrue: [
  (n + 1)
] .
((n = 0)) ifTrue: [
  ackermann value: (m - 1) value: 1
] .
ackermann value: (m - 1) value: ackermann value: m value: (n - 1) ].
main := [ | Transcript show: (('A(0, 0) = ' + (ackermann value: 0 value: 0 asString))) printString; cr.
Transcript show: (('A(1, 2) = ' + (ackermann value: 1 value: 2 asString))) printString; cr.
Transcript show: (('A(2, 4) = ' + (ackermann value: 2 value: 4 asString))) printString; cr.
Transcript show: (('A(3, 4) = ' + (ackermann value: 3 value: 4 asString))) printString; cr. ].
main value.
